ok all classes changed now

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,12 +60,12 @@
                     // Add class to make navbar visible
                     navbar.classList.add('visible');
                     // Add class to make main-title smaller and move to top left
-                    main-title.classList.add('small');
+                    mainTitle.classList.add('small');
                     footer.classList.add('visible');
                 } else {
                     // Remove classes if the user scrolls back up
                     navbar.classList.remove('visible');
-                    main-title.classList.remove('small');
+                    mainTitle.classList.remove('small');
                     footer.classList.remove('visible');
                 }
             });
